--- a/config/database.yml
+++ b/config/database.yml
@@ -14,16 +14,28 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-default: &default
+default:
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: katchups_development
+  pool: 5
+  username: postgres
+  password: <%= ENV['DB_PASS'] %>
+  timeout: 5000
+
+
 
 development:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: katchups_development
+  pool: 5
+  username: postgres
+  password: <%= ENV['DB_PASS'] %>
+  timeout: 5000
+ 
+
+
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -56,8 +68,13 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
   database: katchups_test
+  pool: 5
+  username: postgres
+  password: <%= ENV['DB_PASS'] %>
+  timeout: 5000
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -79,7 +96,10 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: katchups_production
-  username: katchups
-  password: <%= ENV['KATCHUPS_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  database: katchups_development
+  pool: 5
+  username: postgres
+  password: <%= ENV['DB_PASS'] %>
+  timeout: 5000
